# jane

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  GUIDELINES.md  IDENTITY.md  MASTER_PROMPT.md  MEMORY.md  README.md  ROADMAP.md  SOUL.md  TECH_SPEC.md  TOOLS.md  WHITEPAPER.md  generate_llms.sh  jane.py  llms-full.txt  llms.txt  monitor_daemon.py  requirements.txt  server.py  test_input.txt
docs/: BUILD_GUIDE_PYTHON.md  CONTRIBUTING.md  TECH_SPEC_UI.md  TUTORIAL_01_GETTING_STARTED.md  TUTORIAL_02_ARCHITECTURE_DEEP_DIVE.md  TUTORIAL_03_ZPD_AND_SDT.md  TUTORIAL_04_LLM_API_INTEGRATION.md  USER_GUIDE.md
prompts/: ARBITER_PROMPTS.md  CRITIC_PROMPTS.md  DRAFTER_PROMPTS.md  MISTAKE_MENTOR_PROMPTS.md  PROMPT_LIBRARY.md  ROUTER_PROMPTS.md
rust_core/: AGENTS.md  BUILD_GUIDE.md  Cargo.toml  README.md
rust_core/src/: AGENTS.md  README.md  main.rs  policy.rs  sandbox.rs
src/: AGENTS.md  README.md
src/backend/: AGENTS.md  README.md  fuzzy_controller.py  orchestrator.py  semantic_router.py  state_machine.py
src/core/: AGENTS.md  README.md  arbiter.py  critic.py  dad_heuristics.py  drafter.py
src/memory/: memory_manager.py
src/ui/: AGENTS.md  README.md  cli.py
src/ui/html_showcase/: index.html  jane.html  knowledge_data.js
tests/: test_dad_heuristics.py  test_jailbreaks.py
