[package]
name = "jane-iron-core"
version = "0.1.0"
edition = "2021"
description = "Agentic Zero-Trust execution environment for the Jane Developmental AI Companion"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
